force-app/main/default/objects/Opportunity/fields/Reference_Key__c.field-meta.xml
<CustomField>
    <fullName>Reference_Key__c</fullName>
    <externalId>true</externalId>
    <label>Reference Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>