force-app/main/default/objects/Opportunity/fields/vendor__c.field-meta.xml
<CustomField>
    <fullName>vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vendor</label>
    <referenceTo>vendor__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>